# llvm-8085

./: .gitignore  .gitmodules  8085_datasheet.txt  PROJECT_JOURNAL.md  README.md  datalab-output-8085_datasheet.pdf.md
FreeRTOS/: FreeRTOSConfig.h  Makefile  demo_basic.c  demo_heap.c
FreeRTOS-8080/: FreeRTOSConfig.h  Makefile  demo_basic.c  linker.ld  startup.S
builtins/: clzdi2.S  clzsi2.S  ctzdi2.S  ctzsi2.S  divsf3.c  fp_add_impl.inc  fp_lib.h  int_arith64.S  int_div.S  int_divdi3.S  int_divdi3.c  int_fshl.S  int_mul.S  int_rotate.S  int_rotate64.S  int_shift.S  int_shift64.S  int_types.h  malloc.S  memops.S  popcountsi2.S  softfp.S  stringops.S
docs/: 8080_8085_Assembly_Language_Programming_Manual_Nov78.pdf.md  ABI.md  OPT_BASELINE.md  RUNTIME_LIBRARY.md  STATUS.md  datalab-mcs 8080 & 8085 family users manual.pdf.md  datalab-output-UnDoc8085Instructions.pdf.md  (+2 more)
tooling/examples/rust_serde/: Cargo.toml  i8085-unknown-none.json
tooling/examples/rust_serde/serde-json-core-patched/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
tooling/examples/rust_serde/serde-json-core-patched/.github/workflows/: ci.yml
tooling/examples/rust_serde/serde-json-core-patched/src/: lib.rs  str.rs
tooling/examples/rust_serde/serde-json-core-patched/src/de/: enum_.rs  map.rs  mod.rs  seq.rs
tooling/examples/rust_serde/serde-json-core-patched/src/ser/: map.rs  mod.rs  seq.rs  struct_.rs
tooling/examples/rust_serde/serde-patched/src/de/: mod.rs
tooling/examples/rust_serde/serde-patched/src/ser/: fmt.rs
tooling/examples/rust_serde/src/: main.rs
(+144 files in other folders)
